backend/k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: default
  labels:
    app: server
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: metrics
  selector:
    app: server
